<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signInActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/all"
            android:src="@drawable/ic_logo"
            tools:ignore="VectorDrawableCompat"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_active_login"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_marginTop="130dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:paddingLeft="12dp"
            android:hint="@string/email"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="18dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:paddingLeft="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginHorizontal="32dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            />

        <TextView
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_gravity="right"
            android:layout_marginRight="32dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_marginTop="24dp"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginBottom="140dp"
            android:background="@drawable/ic_buttom"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_signup"
                android:textSize="20sp"
                android:layout_marginLeft="62dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="24sp"
                android:layout_marginLeft="16dp"
                android:textColor="#F5AD14"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>